<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Servicos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="navegacao_titulo">ATM Consultoria</string>
    <string name="navegcao_email">atendimento@atmconsultoria.com.br</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aqui_listamos_alguns_dos_nossos_principais_clientes_que_express_o_total_respeito_e_confian_a_no_nosso_trabalho">Aqui listamos alguns dos nossos principais clientes que expressão total respeito e confiança no nosso trabalho</string>
    <string name="clientes">Clientes</string>
    <string name="picpay">PicPay</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="todo">TODO</string>
</resources>